<resources>
    <string name="app_name" translatable="false">KarateFrontEnd</string>
    <string name="ok" translatable="false">OK</string>

    <string name="connection_open">Open connection</string>
    <string name="connection_close">Close connection</string>
    <string name="fighter_info">Fighter information</string>
    <string name="message_private">Private message</string>
    <string name="message_public">Public message</string>
    <string name="elsewhere">Elsewhere</string>
    <string name="elsewhere_list">Elsewhere :</string>
    <string name="spectator">Spectator</string>
    <string name="spectator_list">Spectators :</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_list">Waiting :</string>
    <string name="arbitrator">Arbitrator</string>
    <string name="arbitrator_list">Arbitrators :</string>
    <string name="fight">Fight</string>
    <string name="fight_red">Fight red</string>
    <string name="fight_white">Fight white</string>
    <string name="fight_tie">Fight tie</string>
    <string name="arbiter_red">Arbiter red</string>
    <string name="arbiter_red_fault">Arbiter red with fault</string>
    <string name="exam_pass">Pass exam</string>
    <string name="exam_fail">Fail exam</string>
    <string name="change_role">Change role</string>
</resources>
