<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinFighters"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/connection_open"
        app:layout_constraintStart_toEndOf="@+id/spinFighters"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFighterInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fighter_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinFighters" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toTopOf="@+id/rgPlace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConnection"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPrivateMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/message_private"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFighterInfo" />

    <Button
        android:id="@+id/btnPublicMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/message_public"
        app:layout_constraintStart_toEndOf="@+id/btnPrivateMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvFighterInfo" />

    <TextView
        android:id="@+id/tvPrivateMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/message_private"
        app:layout_constraintBottom_toTopOf="@+id/cbArbiter"
        app:layout_constraintEnd_toStartOf="@+id/btnPublicMessage"
        app:layout_constraintStart_toStartOf="@+id/btnPrivateMessage"
        app:layout_constraintTop_toBottomOf="@+id/btnPrivateMessage" />

    <TextView
        android:id="@+id/tvPublicMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/message_public"
        app:layout_constraintBottom_toTopOf="@+id/cbArbiter"
        app:layout_constraintEnd_toEndOf="@+id/btnPublicMessage"
        app:layout_constraintStart_toStartOf="@+id/btnPublicMessage"
        app:layout_constraintTop_toBottomOf="@+id/btnPublicMessage" />

    <RadioGroup
        android:id="@+id/rgPlace"
        android:layout_width="0dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConnection"
        app:layout_constraintTop_toTopOf="@+id/btnPublicMessage">

        <RadioButton
            android:id="@+id/rbElsewhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/elsewhere" />

        <RadioButton
            android:id="@+id/rbSpectator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spectator" />

        <RadioButton
            android:id="@+id/rbWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/waiting" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbArbiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/arbitrator"
        app:layout_constraintBottom_toTopOf="@+id/rvArbitrators"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvArbitrators"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/arbitrator_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgPlace" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/elsewhere_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvArbitrators" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvElsewhere"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/spectator_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvElsewhere" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSpectators"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/waiting_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSpectators" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvWaiting"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btnFightRed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fight_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvWaiting" />

    <Button
        android:id="@+id/btnFightWhite"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fight_white"
        app:layout_constraintStart_toEndOf="@+id/btnFightRed"
        app:layout_constraintTop_toBottomOf="@+id/rvWaiting" />

    <Button
        android:id="@+id/btnFightTie"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fight_tie"
        app:layout_constraintStart_toEndOf="@+id/btnFightWhite"
        app:layout_constraintTop_toBottomOf="@+id/rvWaiting" />

    <Button
        android:id="@+id/btnArbiterRed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/arbiter_red"
        app:layout_constraintStart_toEndOf="@+id/btnFightTie"
        app:layout_constraintTop_toBottomOf="@+id/rvWaiting" />

    <Button
        android:id="@+id/btnArbiterRedFault"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/arbiter_red_fault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnArbiterRed"
        app:layout_constraintTop_toBottomOf="@+id/rvWaiting" />

    <Button
        android:id="@+id/btnExamPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/exam_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFightRed" />

    <Button
        android:id="@+id/btnExamFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/exam_fail"
        app:layout_constraintStart_toEndOf="@+id/btnExamPass"
        app:layout_constraintTop_toTopOf="@+id/btnExamPass" />

    <Button
        android:id="@+id/btnChangeRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExamPass" />
</android.support.constraint.ConstraintLayout>